--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vectorail",
+  "name": "base64",
   "version": "1.0.0",
   "description": "Some boilerplate code to get you started - get shakin'!",
   "engines": {
-    "node": ">= 11.1.0"
+    "node": ">= 7.0.0"
   },
   "main": "index.js",
   "scripts": {
@@ -38,6 +38,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
+    "clipboard": "^2.0.4",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^4.1.0",
     "express": "^4.16.3",
@@ -57,8 +58,7 @@
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.0",
-    "socket.io": "^2.1.1",
-    "wii-controller": "^0.1.0"
+    "socket.io": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.55",
